--- a/sections/dev__contact-form.liquid
+++ b/sections/dev__contact-form.liquid
@@ -1,66 +1,67 @@
 <div class="contact {{ section.settings.contact }}">
-      <h1 class="contact__style--title {{ section.settings.contact__style--title }} ">{{ section.settings.contact_title }}
-      </h1>
-      
-      <div class="contact__style--form {{ section.settings.contact__style--form }}">
-        {%- form 'contact', id: 'ContactForm', class: 'contact-form__form flex flex-col items-center' -%}
-            {% comment %} First Row {% endcomment %}
-            <div class="contact__1st-row {{ section.settings.contact__1st-row }}">
-              <div class="contact__style--name-field w-1/2">
-                <input
-                  class="contact__style--input {{ section.settings.contact__style--input }}"
-                  autocomplete="name"
-                  type="text"
-                  id="ContactForm-name"
-                  value="{% if form.name %}{{ form.name }}{% elsif customer %}{{ customer.name }}{% endif %}"
-                  placeholder="Name"
-                >
-              </div>
-              <div class="contact__email-field w-1/2">
-                <input
-                  autocomplete="email"
-                  type="email"
-                  id="ContactForm-email"
-                  class="contact__style--input {{ section.settings.contact__style--input }}"
-                  name="contact[email]"
-                  spellcheck="false"
-                  autocapitalize="off"
-                  value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}"
-                  aria-required="true"
-                  placeholder="Email"
-                >
-              </div>
-            </div>
-            {% comment %} Second Row {% endcomment %}
-            <div class="contact__phone-field w-full mt-4">
-              <input
-                type="tel"
-                id="ContactForm-phone"
-                class="contact__style--input {{ section.settings.contact__style--input }}"
-                autocomplete="tel"
-                pattern="[0-9\-]*"
-                value="{% if form.phone %}{{ form.phone }}{% elsif customer %}{{ customer.phone }}{% endif %}"
-                placeholder="Phone Number"
-              >
-            </div>
-            {% comment %} Third Row {% endcomment %}
-            <div class="contact__message-field w-full mt-4">
-              <textarea
-                rows="5"
-                id="ContactForm-body"
-                class="contact__style--textarea {{ section.settings.contact__style--textarea }}"
-                placeholder="Comment"
-              >
+  <h1 class="contact__style--title {{ section.settings.contact__style--title }} ">
+    {{ section.settings.contact_title }}
+  </h1>
+
+  <div class="contact__style--form {{ section.settings.contact__style--form }}">
+    {% assign form_styles = 'contact-form__form ' | append: section.settings.contact_form_styles %}
+    {%- form 'contact', id: 'ContactForm', class: form_styles -%}
+      {% comment %} First Row {% endcomment %}
+      <div class="contact__1st-row {{ section.settings.contact__1st-row }}">
+        <div class="contact__style--name-field w-1/2">
+          <input
+            class="contact__style--input {{ section.settings.contact__style--input }}"
+            autocomplete="name"
+            type="text"
+            id="ContactForm-name"
+            value="{% if form.name %}{{ form.name }}{% elsif customer %}{{ customer.name }}{% endif %}"
+            placeholder="Name"
+          >
+        </div>
+        <div class="contact__email-field w-1/2">
+          <input
+            autocomplete="email"
+            type="email"
+            id="ContactForm-email"
+            class="contact__style--input {{ section.settings.contact__style--input }}"
+            name="contact[email]"
+            spellcheck="false"
+            autocapitalize="off"
+            value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}"
+            aria-required="true"
+            placeholder="Email"
+          >
+        </div>
+      </div>
+      {% comment %} Second Row {% endcomment %}
+      <div class="contact__phone-field w-full mt-4">
+        <input
+          type="tel"
+          id="ContactForm-phone"
+          class="contact__style--input {{ section.settings.contact__style--input }}"
+          autocomplete="tel"
+          pattern="[0-9\-]*"
+          value="{% if form.phone %}{{ form.phone }}{% elsif customer %}{{ customer.phone }}{% endif %}"
+          placeholder="Phone Number"
+        >
+      </div>
+      {% comment %} Third Row {% endcomment %}
+      <div class="contact__message-field w-full mt-4">
+        <textarea
+          rows="5"
+          id="ContactForm-body"
+          class="contact__style--textarea {{ section.settings.contact__style--textarea }}"
+          placeholder="Comment"
+        >
                 {{- form.body -}}
               </textarea>
-            </div>
-            <div class="contact__submit-button {{ section.settings.contact__submit-button }}">
-              {{ section.settings.send_button_text }}
-            </div>
-        {%- endform -%}
       </div>
+      <div class="contact__submit-button {{ section.settings.contact__submit-button }}">
+        {{ section.settings.send_button_text }}
+      </div>
+    {%- endform -%}
+  </div>
 </div>
-
 
 {% schema %}
 {
@@ -99,6 +100,12 @@
       "id": "contact__style--form",
       "label": "Style Contact Form",
       "default": "mt-5 md:mt-7 w-full mx-auto px-6 md:w-3/5"
+    },
+    {
+      "type": "text",
+      "id": "contact__form_styles",
+      "label": "Style Contact Form Inner Container",
+      "default": "flex flex-col items-center"
     },
     {
       "type": "text",
