keyframes not working from tailwind config

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -32,6 +32,15 @@
           });
         </script>   
         <style type='text/tailwindcss'>
+          @tailwind base;
+          @tailwind components;
+          @tailwind utilities;
+
+          @layer utilities {
+            .pause {
+              animation-play-state: paused;
+            }
+          }
           {{ settings.tailwind_css }}
         </style>             
       {% else %}
